fix: minmax: remplace textreme_min/max par tmax_min/max et tmin_min/max
